kubernetes/backend/service.yml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: bakery
spec:
  selector:
    app: backend
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
