kubernetes/backend/networkpolicy.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-frontend-to-backend
  namespace: bakery
spec:
  podSelector:
    matchLabels:
      app: backend              
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: frontend   
      ports:
        - protocol: TCP
          port: 5000
